--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.24"
 clap = { version = "4.2.7", features = ["derive"] }
 gnuplot = "0.0.38"
+plotters = "0.3.4"
 regex = "1.8.1"
