--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,6 @@ clap = { version = "4.2.7", features = ["derive"] }
 gnuplot = "0.0.38"
 plotters = "0.3.4"
 regex = "1.8.1"
+serde = { version = "1.0.163", features = ["derive"] }
+serde_json = "1.0.96"
 substring = "1.4.5"
