--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ chrono = "0.4.24"
 clap = { version = "4.2.7", features = ["derive"] }
 gnuplot = "0.0.38"
 plotters = "0.3.4"
+rayon = "1.7.0"
 regex = "1.8.1"
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
