--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "busboy": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "websocket": "^1.0.34",
+    "ws": "^8.13.0"
   }
 }
